22nd March

Removed default footer
Added in Widgetised footer available in WP Dashboard Widgets

21st March
Remove @import call for 'Lato' font in style.css

Added Google 'Cabin' font in functions.php Google script


20th March
Created a changelog.txt file

Updated readme.txt

Added in commented out theme support for woo commerce in functions.php
 - //add_theme_support( 'genesis-connect-woocommerce' );

Added in theme support for custom backgrounds in functions.php
 - add_theme_support( 'custom-background' );

Added in commented Facebook function and action and CSS for Responsive LikeBox - empty placeholder - just add FB HTML5 script code and uncomment

Positioned main theme CSS style so it loads after all other CSS styles

Added some Woo Commerce CSS


17th March
Added into functions.php 4 scripts and styles which are registered & enqueued

- Google Fonts -> script to call in Google Fonts with sample font; 'Open Sans'
- FontAwesome -> script to call in FontAwesome fonts version 4.0.3
- Placeholder.js -> backward compatible form placeholder text for IE >10
- Responsive Menu -> script to enable mobile hamburger menu on all Genesis Menus

Added in JS folder
- placeholder.js
- responsive.js

Added in style.css
- responsive menu CSS for responsive.js